# learning-build-tools

./: README.md
c++/: README.md
c++/build-c++-demo/: CMakeLists.txt  main.cpp
c++/build-c++-demo/loguru/: CMakeLists.txt
c++/build-c++-demo2/: CMakeLists.txt
c++/build-c++-proj/: CMakeLists.txt  main.cpp
c++/build-c++-proj/greeter/: greeter.cpp  greeter.hpp
java/: .gitignore  README.md
java/build-java-demo/: build.gradle  settings.gradle
java/build-java-demo/src/main/java/mypkg/: App.java
java/build-java-demo/src/main/java/util/: Greeter.java
java/build-java-demo/src/test/java/mypkg/: AppTest.java
python/: README.md
python/build-python-demo/: main.py
